# AbyssalHymn

./: .gitignore  CMakeLists.txt  CONSOLE.cpp  EDITOR.cpp  Makefile  PlayerScript.csv  README.md  ReadMe.md  XXX_IGNORE_XXX.cpp  doc.html  doc.md  main.cpp
Level_Design/Snowy Canyon/simplified/AutoLayers_advanced_demo/: IntGrid_layer.csv  data.json
Level_Design/level1/simplified/AutoLayer/: IntGrid_layer.csv  data.json
Level_Design/level2/simplified/AutoLayers_advanced_demo/: IntGrid_layer.csv  data.json
PyScript/: AnsiCode.py
PyScript/AnimationManip/: RenameAnime.py
PyScript/CsvToBlock/: csv_to_block.py  ldtk_map.csv  new_map.csv
PyScript/MergeBlock/: merge.py  new_block.csv  old_block.csv
assets/: RenameAnime.py
include/: audio.h  audio_object.h  block.h  block_template.h  bubble.h  camera.h  collision.h  configuration.h  decoration.h  decoration_dynamic.h  decoration_static.h  door.h  enemies.h  enemy.h  event_trigger.h  game.h  hud.h  input.h  item.h  map.h  mulitplayer.h  multiplayer.h  npc_dialogue.h  object2D.h  particle_effect.h  player.h  projectile.h  renderer.h  scene.h  sprite.h  stage1.h  stages.h  world.h
include/UI/: button.h  intro.h  menu.h  pause.h
include/developer/: console.h  editor.h
include/enemy/: all_enemies.h  skeleton.h  slime.h
include/map/: map1.h
libraries/SDL2/include/SDL2/: SDL_assert.h
map_data/: ReadMe.md  exclusive_all.h
map_data/AncientEmrald/: background.csv
map_data/DeadAhead/: exclusive_init.h
map_data/DeepCavern/: background.csv
map_data/DustyMirage/: background.csv  playlist.csv
map_data/LobbyInside/: background.csv  block_path.csv  door.csv  exclusive_update.h
map_data/LobbyOutside/: audio_obj.csv  background.csv  block_back.csv  block_main.csv  camera_box.csv  decoration_back.csv  decoration_front.csv  exclusive_update.h  transit_map.csv
map_data/SeaHorizon/: background.csv  block_path.csv  exclusive_update.h
map_data/SnowyCanyon/: background.csv  exclusive_update.h
map_data/SunlightValley/: background.csv  block_main.csv  block_path.csv  camera_box.csv  door.csv  exclusive_update.h
map_data/Tutorial1/: block_back.csv  block_hidden.csv  block_main.csv  bubble.csv  camera_box.csv  exclusive_update.h  transit_map.csv
map_data/Tutorial2/: block_back.csv  block_main.csv  block_path.csv  camera_box.csv  exclusive_init.h  exclusive_update.h
map_data/Tutorial3/: block_path.csv  door.csv  exclusive_init.h  exclusive_update.h
map_data/Tutorial4/: background.csv  exclusive_update.h
map_data/__BACKUP__/: block_main.csv
map_data/__TEMPLATE__/: exclusive_init.h  exclusive_update.h
player_data/: PlayerScript.csv
res/: RenameAnime.py
src/: audio.cpp  audio_object.cpp  block.cpp  block_template.cpp  bubble.cpp  camera.cpp  collision.cpp  configuration.cpp  decoration.cpp  decoration_dynamic.cpp  decoration_static.cpp  door.cpp  enemy.cpp  event_trigger.cpp  game.cpp  hud.cpp  input.cpp  item.cpp  map.cpp  multiplayer.cpp  npc_dialogue.cpp  object2D.cpp  particle_effect.cpp  player.cpp  projectile.cpp  renderer.cpp  scene.cpp  sprite.cpp  stage1.cpp  stages.cpp  world.cpp
src/UI/: button.cpp  intro.cpp  menu.cpp  pause.cpp
src/enemy/: map1.cpp  skeleton.cpp  slime.cpp
src/map/: map1.cpp  map1backup.cpp
src/map_data/: ReadMe.md
src/map_data/AncientEmrald/: background.csv  exclusive_init.h
src/map_data/LobbyInside/: block_back.csv  block_hidden.csv  block_main.csv
src/map_data/LobbyOutside/: block_hidden.csv  block_main.csv  door.csv  transit_map.csv
src/map_data/SeaHorizon/: background.csv  exclusive_init.h  exclusive_update.h
src/map_data/SnowyCanyon/: exclusive_init.h  exclusive_update.h
src/map_data/SunlightValley/: exclusive_init.h  exclusive_update.h
src/map_data/Tutorial1/: block_main.csv
src/map_data/Tutorial2/: block_path.csv  exclusive_update.h
src/map_data/Tutorial3/: block_path.csv  exclusive_update.h
src/map_data/Tutorial4/: bubble.csv  exclusive_init.h  exclusive_update.h
src/map_data/__TEMPLATE__/: block_path.csv
